transfor device api changed

--- a/server/emailTemplates/addTripDetails.html
+++ b/server/emailTemplates/addTripDetails.html
@@ -28,8 +28,12 @@
                 <td>$emailData.driverNumber</td>
             </tr>
             <tr>
-                <td>Trip Lane</td>
-                <td>$emailData.tripLane</td>
+                <td>Source</td>
+                <td>$emailData.source</td>
+            </tr>
+            <tr>
+                <td>Destination</td>
+                <td>$emailData.destination</td>
             </tr>
             <tr>
                 <td>Tonnage</td>
