modified sending emails..

--- a/server/emailTemplates/expenseDetails.html
+++ b/server/emailTemplates/expenseDetails.html
@@ -18,9 +18,9 @@
         #foreach($record in $emailData)
         <tr>
             <td>$record.date</td>
-            <td>$record.attrs.truckName</td>
-            <td>$record.attrs.expenseName</td>
-            <td>$record.cost</td>
+            <td>$record.vehicleNumber</td>
+            <td>$record.expenseType</td>
+            <td>$record.amount</td>
             <td>$record.mode</td>
             <td>$record.description</td>
         </tr>
