--- a/server/emailTemplates/receiptDetails.html
+++ b/server/emailTemplates/receiptDetails.html
@@ -16,7 +16,7 @@
         #foreach($record in $emailData)
         <tr>
             <td>$record.date</td>
-            <td>$record.partyId.name</td>
+            <td>$record.partyId</td>
             <td>$record.amount</td>
             <td>$record.description</td>
         </tr>
