--- a/server/emailTemplates/truckDetails.html
+++ b/server/emailTemplates/truckDetails.html
@@ -19,15 +19,14 @@
         </tr>
         #foreach($record in $emailData)
         <tr>
-            <td>$record.registrationNo</td>
-            <td>$record.permitExpiry</td>
-            <td>$record.pollutionExpiry</td>
-            <td>$record.insuranceExpiry</td>
-            <td>$record.fitnessExpiry</td>
-            <td>$record.taxDueDate</td>
-            <td>$record.attrs.fullName</td>
-            <td>$record.attrs.mobile</td>
-
+            <td>$record.Reg_No</td>
+            <td>$record.Permit</td>
+            <td>$record.Pollution</td>
+            <td>$record.Insurance</td>
+            <td>$record.Fitness</td>
+            <td>$record.Tax</td>
+            <td>$record.Driver</td>
+            <td>$record.Mobile</td>
         </tr>
         #end
     </table>
