--- a/server/emailTemplates/addTripDetails.html
+++ b/server/emailTemplates/addTripDetails.html
@@ -45,7 +45,7 @@
             </tr>
             <tr>
                 <td>Amount</td>
-                <td>$emailData.Amount</td>
+                <td>$emailData.Amount.toFixed(2)</td>
             </tr>
 
         </table>
