--- a/server/emailTemplates/expenseDetails.html
+++ b/server/emailTemplates/expenseDetails.html
@@ -20,7 +20,7 @@
             <td>$record.date</td>
             <td>$record.vehicleNumber</td>
             <td>$record.expenseType</td>
-            <td>$record.amount</td>
+            <td>$record.amount.toFixed(2)</td>
             <td>$record.mode</td>
             <td>$record.description</td>
         </tr>
