--- a/server/emailTemplates/paymentDetails.html
+++ b/server/emailTemplates/paymentDetails.html
@@ -17,7 +17,7 @@
         <tr>
             <td>$record.date</td>
             <td>$record.partyId</td>
-            <td>$record.amount</td>
+            <td>$record.amount.toFixed(2)</td>
             <td>$record.description</td>
         </tr>
         #end
