--- a/server/emailTemplates/receiptDetails.html
+++ b/server/emailTemplates/receiptDetails.html
@@ -19,7 +19,7 @@
         <tr>
             <td>$record.date</td>
             <td>$record.party</td>
-            <td>$record.amount</td>
+            <td>$record.amount.toFixed(2)</td>
             <td>$record.paymentType</td>
             <td>$record.receiptRefNo</td>
             <td>$record.description</td>
