--- a/server/emailTemplates/tripDetails.html
+++ b/server/emailTemplates/tripDetails.html
@@ -21,7 +21,7 @@
             <td>$record.truckName</td>
             <td>$record.partyName</td>
             <td>$record.fullName</td>
-            <td>$record.freightAmount</td>
+            <td>$record.freightAmount.toFixed(2)</td>
             <td>$record.mobile</td>
         </tr>
         #end
