--- a/server/emailTemplates/LoadRequestDetails.html
+++ b/server/emailTemplates/LoadRequestDetails.html
@@ -5,19 +5,6 @@
     <title>Easygaadi</title>
 </head>
 <body>
-<div>
-    <table border="1">
-        <tr>
-            <td>Party Name</td>
-            <td>Contact</td>
-        </tr>
-        #foreach($record in $emailData)
-        <tr>
-            <td>$record.partyName</td>
-            <td>$record.contact</td>
-        </tr>
-        #end
-    </table>
-</div>
+<div><p>$emailData</p></div>
 </body>
 </html>
