--- a/server/emailTemplates/addTripDetails.html
+++ b/server/emailTemplates/addTripDetails.html
@@ -20,6 +20,10 @@
                 <td>$emailData.vehicleNo</td>
             </tr>
             <tr>
+                <td>Party</td>
+                <td>$emailData.name</td>
+            </tr>
+            <tr>
                 <td>Driver Name</td>
                 <td>$emailData.driverName</td>
             </tr>
@@ -46,6 +50,10 @@
             <tr>
                 <td>Amount</td>
                 <td>$emailData.Amount.toFixed(2)</td>
+            </tr>
+            <tr>
+                <td>Share Link</td>
+                <td>$emailData.shareLink</td>
             </tr>
 
         </table>
